# codex-integrated-memory-rules

./: .env.example  .gitattributes  .gitignore  LICENSE  NOTICE.md  README.md  install.ps1
.github/workflows/: validate.yml
archive/desktop-sources/2026-05-06/: manifest.json
archive/desktop-sources/2026-05-06/codex-rulekit/: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE
archive/desktop-sources/2026-05-06/codex-rulekit/.github/: pull_request_template.md
archive/desktop-sources/2026-05-06/codex-rulekit/.github/workflows/: ci.yml
archive/desktop-sources/2026-05-06/codex-rulekit/docs/: PRODUCT_OVERVIEW.md
archive/desktop-sources/2026-05-06/prune-mem/: prune-mem-skill-guide.txt
codex-rulekit/: README.md  pyproject.toml
codex-rulekit/src/codex_rulekit/: common.py  core.py  profile.py  selection.py
codex-rulekit/src/codex_rulekit/templates/project/: project-profile.yaml  project-rules.generated.md.tmpl
codex-rulekit/src/codex_rulekit/templates/rule-library/curated/frontend/: browser-game-frontend.md  responsive-ui-checks.md
codex-rulekit/tests/: test_workflow.py
prune-mem/: README.md
prune-mem/examples/: transcript.json
prune-mem/scripts/: verify_installed_skill.ps1
prune-mem/skill/prune-mem-skill/scripts/: backfill_codex_sessions.py  recall_memory.py  session_end.py  session_start.py
prune-mem/src/prune_mem/: extractors.py
prune-mem/tests/: conftest.py  test_policies.py  test_runtime_config.py  test_skill_session_scripts.py
scripts/: doctor.py  finalize_session.py  integrate_project.py  release_check.py
(+24 files in other folders)
